@@ -27,7 +27,7 @@ CLEANFILES = hugehelp.c
 NROFF=@NROFF@
 
 EXTRA_DIST = mkhelp.pl config-win32.h \
-	Makefile.vc6 Makefile.b32 Makefile.m32
+	Makefile.vc6 Makefile.b32 Makefile.m32 config.h.in
 
 AUTOMAKE_OPTIONS = foreign no-dependencies
 
